--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@ body {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 section {
